<resources>
    <string name="app_name">weatherapp</string>
    <string name="clock">clock</string>
    <string name="_13h_1m">13h 1m</string>
    <string name="sunrise">Sunrise</string>
    <string name="_6_03_am">6:03 AM</string>
    <string name="sunset">sunset</string>
    <string name="_7_05_pm">7:05 PM</string>
    <string name="pressure">pressure</string>
    <string name="_23_km_h">23 km/h</string>
    <string name="humidity">Humidity</string>
    <string name="_49">49%</string>
    <string name="pressure1">pressure</string>
    <string name="_1_007mbar">1,007mBar</string>
    <string name="speed">speed</string>
    <string name="_27_c">27°C</string>
    <string name="sunny">Sunny</string>
    <string name="_35_c">35°C</string>
    <string name="_33">33</string>
    <string name="c">°C</string>
    <string name="sunday_19_may_2023_4_30pm">Sunday, 19 May 2023 | 4:30PM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>