<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:src="@drawable/graphic"
        app:layout_constraintBottom_toTopOf="@id/info"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/info"
        android:layout_width="410dp"
        android:layout_height="490dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/sunday_19_may_2023_4_30pm"
                android:fontFamily="@font/barlow_extra_light"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/location_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_locate_btn"
                android:drawableEnd="@drawable/ic_location"
                android:drawablePadding="4dp"
                android:fontFamily="@font/barlow_extra_light"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Osh, Kyrgyzstan" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="52dp"
                android:text="@string/_33"
                android:fontFamily="@font/barlow_extra_light"
                android:textColor="@color/black"
                android:textSize="70sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/temp"
                app:layout_constraintTop_toTopOf="@id/temp" />

            <ImageView
                android:id="@+id/sunny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:src="@drawable/ic_sunny"
                app:layout_constraintBottom_toBottomOf="@id/temp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/temp"
                app:layout_constraintStart_toEndOf="@id/temp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_extrabolditalic"
                android:text="@string/sunny"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/sunny"
                app:layout_constraintStart_toStartOf="@id/sunny"
                app:layout_constraintTop_toBottomOf="@id/sunny" />

            <TextView
                android:id="@+id/stemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_35_c"
                android:layout_margin="24dp"
                app:layout_constraintStart_toEndOf="@id/temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/temp"
                />
            <TextView
                android:id="@+id/xtemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_27_c"
                android:layout_margin="24dp"
                app:layout_constraintStart_toEndOf="@id/temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/stemp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_increase"
                app:layout_constraintStart_toEndOf="@id/stemp"
                app:layout_constraintTop_toTopOf="@id/stemp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_decrease"
                app:layout_constraintStart_toEndOf="@id/xtemp"
                app:layout_constraintTop_toTopOf="@id/xtemp"
                />
            <ImageView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/group__1_"
                app:layout_constraintTop_toBottomOf="@id/temp"
                app:layout_constraintStart_toStartOf="@id/temp"
                app:layout_constraintEnd_toEndOf="@id/temp"
                android:layout_margin="32dp"
                />
            <TextView
                android:id="@+id/ic_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pressure"
                app:layout_constraintStart_toStartOf="@id/pressure"
                app:layout_constraintEnd_toEndOf="@id/pressure"
                android:fontFamily="@font/barlow_extrabolditalic"
                android:text="@string/_1_007mbar"
                />
            <TextView
                android:id="@+id/textpressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ic_pressure"
                app:layout_constraintStart_toStartOf="@id/ic_pressure"
                app:layout_constraintEnd_toEndOf="@id/ic_pressure"
                android:fontFamily="@font/barlow_extra_light"
                android:text="@string/pressure1"
                />
            <ImageView
                android:id="@+id/wet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_wet"
                android:layout_marginStart="40dp"
                app:layout_constraintBottom_toBottomOf="@id/pressure"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/pressure"
                app:layout_constraintStart_toEndOf="@id/pressure"
                />
            <TextView
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/wet"
                app:layout_constraintStart_toStartOf="@id/wet"
                app:layout_constraintEnd_toEndOf="@id/wet"
                android:fontFamily="@font/barlow_extrabolditalic"
                android:text="@string/_49"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/percent"
                app:layout_constraintStart_toStartOf="@id/percent"
                app:layout_constraintEnd_toEndOf="@id/percent"
                android:fontFamily="@font/barlow_extra_light"
                android:text="@string/humidity"
                />
            <ImageView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/_01_wind_1"
                app:layout_constraintTop_toTopOf="@id/pressure"
                app:layout_constraintStart_toStartOf="@id/xtemp"
                app:layout_constraintEnd_toEndOf="@id/xtemp"
                app:layout_constraintBottom_toBottomOf="@id/pressure"
                />
            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/wind"
                app:layout_constraintStart_toStartOf="@id/wind"
                app:layout_constraintEnd_toEndOf="@id/wind"
                android:fontFamily="@font/barlow_extrabolditalic"
                android:text="@string/_23_km_h"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/speed"
                app:layout_constraintStart_toStartOf="@id/speed"
                app:layout_constraintEnd_toEndOf="@id/speed"
                android:fontFamily="@font/barlow_extra_light"
                android:text="@string/speed"
                />
            <ImageView
                android:id="@+id/sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/group__2_"
                app:layout_constraintTop_toBottomOf="@id/textpressure"
                app:layout_constraintStart_toStartOf="@id/textpressure"
                app:layout_constraintEnd_toEndOf="@id/textpressure"
                android:layout_margin="26dp"
                />
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sunset"
                app:layout_constraintStart_toStartOf="@id/sunset"
                app:layout_constraintEnd_toEndOf="@id/sunset"
                android:fontFamily="@font/barlow_extrabolditalic"
                android:text="@string/_7_05_pm"
                />
            <TextView
                android:id="@+id/tsunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/time"
                app:layout_constraintStart_toStartOf="@id/time"
                app:layout_constraintEnd_toEndOf="@id/time"
                android:fontFamily="@font/barlow_extra_light"
                android:text="@string/sunset"
                />
            <ImageView
                android:id="@+id/sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/group__3_"
                android:layout_marginStart="40dp"
                app:layout_constraintBottom_toBottomOf="@id/sunset"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/sunset"
                app:layout_constraintStart_toEndOf="@id/sunset"
                />
            <TextView
                android:id="@+id/time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sunrise"
                app:layout_constraintStart_toStartOf="@id/sunrise"
                app:layout_constraintEnd_toEndOf="@id/sunrise"
                android:fontFamily="@font/barlow_extrabolditalic"
                android:text="@string/_6_03_am"
                />
            <TextView
                android:id="@+id/tsunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/time1"
                app:layout_constraintStart_toStartOf="@id/time1"
                app:layout_constraintEnd_toEndOf="@id/time1"
                android:fontFamily="@font/barlow_extra_light"
                android:text="@string/sunrise"
                />
            <ImageView
                android:id="@+id/clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sand_clock"
                app:layout_constraintTop_toTopOf="@id/sunset"
                app:layout_constraintStart_toStartOf="@id/wind"
                app:layout_constraintEnd_toEndOf="@id/wind"
                app:layout_constraintBottom_toBottomOf="@id/sunset"
                />
            <TextView
                android:id="@+id/time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/clock"
                app:layout_constraintStart_toStartOf="@id/clock"
                app:layout_constraintEnd_toEndOf="@id/clock"
                android:fontFamily="@font/barlow_extrabolditalic"
                android:text="@string/_13h_1m"
                />
            <TextView
                android:id="@+id/tclock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/time2"
                app:layout_constraintStart_toStartOf="@id/time2"
                app:layout_constraintEnd_toEndOf="@id/time2"
                android:fontFamily="@font/barlow_extra_light"
                android:text="@string/clock"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="18dp"
                tools:listitem="@layout/item_weather"
                tools:orientation="horizontal"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>